--- a/app/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/app/src/main/res/layout/tunnel_detail_fragment.xml
@@ -43,7 +43,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_toStartOf="@+id/tunnel_switch"
-                    android:text="@string/iface" />
+                    android:text="@string/interface_title" />
 
                 <com.wireguard.android.widget.ToggleSwitch
                     android:id="@+id/tunnel_switch"
