--- a/app/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/app/src/main/res/layout/tunnel_detail_fragment.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="com.wireguard.android.fragment.TunnelController" />
+
         <import type="com.wireguard.android.model.Tunnel.State" />
 
         <import type="com.wireguard.android.util.ClipboardUtils" />
@@ -52,7 +54,7 @@
                     android:layout_alignBaseline="@+id/interface_title"
                     android:layout_alignParentEnd="true"
                     app:checked="@{tunnel.state == State.UP}"
-                    app:onBeforeCheckedChanged="@{() -> tunnel.setState(State.TOGGLE)}" />
+                    app:onBeforeCheckedChanged="@{TunnelController::setTunnelState}" />
 
                 <TextView
                     android:id="@+id/interface_name_label"
