--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,5 +5,5 @@
         android:key="restore_on_boot"
         android:summary="@string/restore_on_boot_summary"
         android:title="@string/restore_on_boot_title" />
-    <com.wireguard.android.preference.ToolsInstallerPreference />
+    <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
 </PreferenceScreen>
