Remove sloppy java with enterprise java horrors
Since the amount of mind numbing boiler plate has been increased, this
must be the proper way to do things.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/tunnel_editor_peer.xml
+++ b/app/src/main/res/layout/tunnel_editor_peer.xml
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/allowed_ips_label"
             android:inputType="textNoSuggestions|textVisiblePassword"
-            android:text="@={item.allowedIPs}" />
+            android:text="@={item.allowedIPsString}" />
 
         <TextView
             android:id="@+id/endpoint_label"
