--- a/app/src/main/res/layout/tunnel_detail_peer.xml
+++ b/app/src/main/res/layout/tunnel_detail_peer.xml
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/allowed_ips_label"
-            android:text="@{item.allowedIPs}" />
+            android:text="@{item.allowedIPsString}" />
 
         <TextView
             android:id="@+id/endpoint_label"
