--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -143,7 +143,7 @@
                         android:layout_below="@+id/addresses_label"
                         android:layout_toStartOf="@+id/listen_port_text"
                         android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.interface.address}" />
+                        android:text="@={config.interface.addressString}" />
 
                     <TextView
                         android:id="@+id/listen_port_label"
@@ -185,7 +185,7 @@
                         android:layout_below="@+id/dns_servers_label"
                         android:layout_toStartOf="@+id/mtu_text"
                         android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.interface.dns}" />
+                        android:text="@={config.interface.dnsString}" />
 
                     <TextView
                         android:id="@+id/mtu_label"
