--- a/app/src/main/res/layout/tunnel_detail_peer.xml
+++ b/app/src/main/res/layout/tunnel_detail_peer.xml
@@ -6,12 +6,8 @@
         <import type="com.wireguard.android.util.ClipboardUtils" />
 
         <variable
-            name="collection"
-            type="android.databinding.ObservableList&lt;com.wireguard.config.Peer&gt;" />
-
-        <variable
             name="item"
-            type="com.wireguard.config.Peer" />
+            type="com.wireguard.config.Peer.Observable" />
     </data>
 
     <RelativeLayout
@@ -69,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/allowed_ips_label"
-            android:text="@{item.allowedIPsString}" />
+            android:text="@{item.allowedIPs}" />
 
         <TextView
             android:id="@+id/endpoint_label"
@@ -86,6 +82,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/endpoint_label"
-            android:text="@{item.endpointString}" />
+            android:text="@{item.endpoint}" />
     </RelativeLayout>
 </layout>
