wg: Migrate menu visibility to AppCompat
Signed-off-by: Harsh Shandilya <harsh@prjkt.io>

--- a/app/src/main/res/menu/config_editor.xml
+++ b/app/src/main/res/menu/config_editor.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_action_save"
         android:alphabeticShortcut="s"
         android:icon="@drawable/ic_action_save"
-        android:showAsAction="always"
-        android:title="@string/save" />
+        android:title="@string/save"
+        app:showAsAction="always" />
 </menu>
