--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,4 +6,5 @@
         android:summary="@string/restore_on_boot_summary"
         android:title="@string/restore_on_boot_title" />
     <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
+    <com.wireguard.android.preference.ZipExporterPreference android:key="zip_exporter" />
 </PreferenceScreen>
