--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -18,7 +18,7 @@
             type="com.wireguard.config.Config.Observable" />
     </data>
 
-    <com.commonsware.cwac.crossport.design.widget.CoordinatorLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -226,5 +226,5 @@
                     android:text="@string/add_peer" />
             </LinearLayout>
         </ScrollView>
-    </com.commonsware.cwac.crossport.design.widget.CoordinatorLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
