--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -15,7 +15,7 @@
             type="com.wireguard.android.util.ObservableKeyedList&lt;String, Tunnel&gt;" />
     </data>
 
-    <com.commonsware.cwac.crossport.design.widget.CoordinatorLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,5 +57,5 @@
                 app:fab_size="mini"
                 app:fab_title="@string/create_from_file" />
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
-    </com.commonsware.cwac.crossport.design.widget.CoordinatorLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
