--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -41,171 +41,177 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:background="?android:attr/colorBackground"
-                    android:elevation="2dp"
-                    android:padding="8dp">
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="2dp"
+                    app:contentPadding="8dp">
 
-                    <TextView
-                        android:id="@+id/interface_title"
-                        style="?android:attr/textAppearanceMedium"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:text="@string/interface_title" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/interface_name_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/interface_title"
-                        android:layout_marginTop="8dp"
-                        android:labelFor="@+id/interface_name_text"
-                        android:text="@string/name" />
+                        <TextView
+                            android:id="@+id/interface_title"
+                            style="?android:attr/textAppearanceMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:text="@string/interface_title" />
 
-                    <EditText
-                        android:id="@+id/interface_name_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/interface_name_label"
-                        android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.name}"
-                        app:filter="@{NameInputFilter.newInstance()}" />
+                        <TextView
+                            android:id="@+id/interface_name_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/interface_title"
+                            android:layout_marginTop="8dp"
+                            android:labelFor="@+id/interface_name_text"
+                            android:text="@string/name" />
 
-                    <TextView
-                        android:id="@+id/private_key_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/interface_name_text"
-                        android:labelFor="@+id/private_key_text"
-                        android:text="@string/private_key" />
+                        <EditText
+                            android:id="@+id/interface_name_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/interface_name_label"
+                            android:inputType="textNoSuggestions|textVisiblePassword"
+                            android:text="@={config.name}"
+                            app:filter="@{NameInputFilter.newInstance()}" />
 
-                    <EditText
-                        android:id="@+id/private_key_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/private_key_label"
-                        android:layout_toStartOf="@+id/generate_private_key_button"
-                        android:contentDescription="@string/public_key_description"
-                        android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.interfaceSection.privateKey}"
-                        app:filter="@{KeyInputFilter.newInstance()}" />
+                        <TextView
+                            android:id="@+id/private_key_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/interface_name_text"
+                            android:labelFor="@+id/private_key_text"
+                            android:text="@string/private_key" />
 
-                    <Button
-                        android:id="@+id/generate_private_key_button"
-                        android:layout_width="96dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/private_key_text"
-                        android:layout_alignParentEnd="true"
-                        android:layout_below="@+id/private_key_label"
-                        android:onClick="@{() -> config.interfaceSection.generateKeypair()}"
-                        android:text="@string/generate" />
+                        <EditText
+                            android:id="@+id/private_key_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/private_key_label"
+                            android:layout_toStartOf="@+id/generate_private_key_button"
+                            android:contentDescription="@string/public_key_description"
+                            android:inputType="textNoSuggestions|textVisiblePassword"
+                            android:text="@={config.interfaceSection.privateKey}"
+                            app:filter="@{KeyInputFilter.newInstance()}" />
 
-                    <TextView
-                        android:id="@+id/public_key_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/private_key_text"
-                        android:labelFor="@+id/public_key_text"
-                        android:text="@string/public_key" />
+                        <Button
+                            android:id="@+id/generate_private_key_button"
+                            android:layout_width="96dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@id/private_key_text"
+                            android:layout_alignParentEnd="true"
+                            android:layout_below="@+id/private_key_label"
+                            android:onClick="@{() -> config.interfaceSection.generateKeypair()}"
+                            android:text="@string/generate" />
 
-                    <TextView
-                        android:id="@+id/public_key_text"
-                        style="?android:attr/editTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/public_key_label"
-                        android:contentDescription="@string/public_key_description"
-                        android:ellipsize="end"
-                        android:focusable="false"
-                        android:hint="@string/hint_generated"
-                        android:maxLines="1"
-                        android:onClick="@{ClipboardUtils::copyTextView}"
-                        android:text="@{config.interfaceSection.publicKey}" />
+                        <TextView
+                            android:id="@+id/public_key_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/private_key_text"
+                            android:labelFor="@+id/public_key_text"
+                            android:text="@string/public_key" />
 
-                    <TextView
-                        android:id="@+id/addresses_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/public_key_text"
-                        android:layout_toStartOf="@+id/listen_port_label"
-                        android:labelFor="@+id/addresses_text"
-                        android:text="@string/addresses" />
+                        <TextView
+                            android:id="@+id/public_key_text"
+                            style="?android:attr/editTextStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/public_key_label"
+                            android:contentDescription="@string/public_key_description"
+                            android:ellipsize="end"
+                            android:focusable="false"
+                            android:hint="@string/hint_generated"
+                            android:maxLines="1"
+                            android:onClick="@{ClipboardUtils::copyTextView}"
+                            android:text="@{config.interfaceSection.publicKey}" />
 
-                    <EditText
-                        android:id="@+id/addresses_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/addresses_label"
-                        android:layout_toStartOf="@+id/listen_port_text"
-                        android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.interfaceSection.addresses}" />
+                        <TextView
+                            android:id="@+id/addresses_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/public_key_text"
+                            android:layout_toStartOf="@+id/listen_port_label"
+                            android:labelFor="@+id/addresses_text"
+                            android:text="@string/addresses" />
 
-                    <TextView
-                        android:id="@+id/listen_port_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/addresses_label"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/generate_private_key_button"
-                        android:labelFor="@+id/listen_port_text"
-                        android:text="@string/listen_port" />
+                        <EditText
+                            android:id="@+id/addresses_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/addresses_label"
+                            android:layout_toStartOf="@+id/listen_port_text"
+                            android:inputType="textNoSuggestions|textVisiblePassword"
+                            android:text="@={config.interfaceSection.addresses}" />
 
-                    <EditText
-                        android:id="@+id/listen_port_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/addresses_text"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/generate_private_key_button"
-                        android:hint="@string/hint_random"
-                        android:inputType="number"
-                        android:text="@={config.interfaceSection.listenPort}"
-                        android:textAlignment="center" />
+                        <TextView
+                            android:id="@+id/listen_port_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/addresses_label"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignStart="@+id/generate_private_key_button"
+                            android:labelFor="@+id/listen_port_text"
+                            android:text="@string/listen_port" />
 
-                    <TextView
-                        android:id="@+id/dns_servers_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/addresses_text"
-                        android:layout_toStartOf="@+id/mtu_label"
-                        android:labelFor="@+id/dns_servers_text"
-                        android:text="@string/dns_servers" />
+                        <EditText
+                            android:id="@+id/listen_port_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/addresses_text"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignStart="@+id/generate_private_key_button"
+                            android:hint="@string/hint_random"
+                            android:inputType="number"
+                            android:text="@={config.interfaceSection.listenPort}"
+                            android:textAlignment="center" />
 
-                    <EditText
-                        android:id="@+id/dns_servers_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/dns_servers_label"
-                        android:layout_toStartOf="@+id/mtu_text"
-                        android:inputType="textNoSuggestions|textVisiblePassword"
-                        android:text="@={config.interfaceSection.dnses}" />
+                        <TextView
+                            android:id="@+id/dns_servers_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/addresses_text"
+                            android:layout_toStartOf="@+id/mtu_label"
+                            android:labelFor="@+id/dns_servers_text"
+                            android:text="@string/dns_servers" />
 
-                    <TextView
-                        android:id="@+id/mtu_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/dns_servers_label"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/generate_private_key_button"
-                        android:labelFor="@+id/mtu_text"
-                        android:text="@string/mtu" />
+                        <EditText
+                            android:id="@+id/dns_servers_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/dns_servers_label"
+                            android:layout_toStartOf="@+id/mtu_text"
+                            android:inputType="textNoSuggestions|textVisiblePassword"
+                            android:text="@={config.interfaceSection.dnses}" />
 
-                    <EditText
-                        android:id="@+id/mtu_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/dns_servers_text"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/generate_private_key_button"
-                        android:hint="@string/hint_automatic"
-                        android:inputType="number"
-                        android:text="@={config.interfaceSection.mtu}"
-                        android:textAlignment="center" />
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/mtu_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/dns_servers_label"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignStart="@+id/generate_private_key_button"
+                            android:labelFor="@+id/mtu_text"
+                            android:text="@string/mtu" />
+
+                        <EditText
+                            android:id="@+id/mtu_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/dns_servers_text"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignStart="@+id/generate_private_key_button"
+                            android:hint="@string/hint_automatic"
+                            android:inputType="number"
+                            android:text="@={config.interfaceSection.mtu}"
+                            android:textAlignment="center" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
