--- a/app/src/main/res/layout/tunnel_editor_peer.xml
+++ b/app/src/main/res/layout/tunnel_editor_peer.xml
@@ -15,128 +15,134 @@
             type="com.wireguard.config.Peer.Observable" />
     </data>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:background="?android:attr/colorBackground"
-        android:elevation="2dp"
-        android:padding="8dp">
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        app:contentPadding="8dp">
 
-        <TextView
-            android:id="@+id/peer_title"
-            style="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="8dp"
-            android:layout_toStartOf="@+id/peer_action_delete"
-            android:text="@string/peer" />
-
-        <ImageButton
-            android:id="@+id/peer_action_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:background="@null"
-            android:contentDescription="@string/delete"
-            android:onClick="@{() -> collection.remove(item)}"
-            android:src="@drawable/ic_action_delete_black" />
-
-        <TextView
-            android:id="@+id/public_key_label"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/peer_title"
-            android:labelFor="@+id/public_key_text"
-            android:text="@string/public_key" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/public_key_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/public_key_label"
-            android:inputType="textNoSuggestions|textVisiblePassword"
-            android:text="@={item.publicKey}"
-            app:filter="@{KeyInputFilter.newInstance()}" />
+            <TextView
+                android:id="@+id/peer_title"
+                style="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="8dp"
+                android:layout_toStartOf="@+id/peer_action_delete"
+                android:text="@string/peer" />
 
-        <TextView
-            android:id="@+id/pre_shared_key_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/public_key_text"
-            android:labelFor="@+id/pre_shared_key_text"
-            android:text="@string/pre_shared_key" />
+            <ImageButton
+                android:id="@+id/peer_action_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:background="@null"
+                android:contentDescription="@string/delete"
+                android:onClick="@{() -> collection.remove(item)}"
+                android:src="@drawable/ic_action_delete_black" />
 
-        <EditText
-            android:id="@+id/pre_shared_key_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/pre_shared_key_label"
-            android:hint="@string/hint_optional"
-            android:inputType="textNoSuggestions|textVisiblePassword"
-            android:text="@={item.preSharedKey}" />
+            <TextView
+                android:id="@+id/public_key_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/peer_title"
+                android:labelFor="@+id/public_key_text"
+                android:text="@string/public_key" />
 
-        <TextView
-            android:id="@+id/allowed_ips_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/pre_shared_key_text"
-            android:labelFor="@+id/allowed_ips_text"
-            android:text="@string/allowed_ips" />
+            <EditText
+                android:id="@+id/public_key_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/public_key_label"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                android:text="@={item.publicKey}"
+                app:filter="@{KeyInputFilter.newInstance()}" />
 
-        <EditText
-            android:id="@+id/allowed_ips_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/allowed_ips_label"
-            android:inputType="textNoSuggestions|textVisiblePassword"
-            android:text="@={item.allowedIPs}" />
+            <TextView
+                android:id="@+id/pre_shared_key_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/public_key_text"
+                android:labelFor="@+id/pre_shared_key_text"
+                android:text="@string/pre_shared_key" />
 
-        <TextView
-            android:id="@+id/endpoint_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/allowed_ips_text"
-            android:layout_toStartOf="@+id/persistent_keepalive_label"
-            android:labelFor="@+id/endpoint_text"
-            android:text="@string/endpoint" />
+            <EditText
+                android:id="@+id/pre_shared_key_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pre_shared_key_label"
+                android:hint="@string/hint_optional"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                android:text="@={item.preSharedKey}" />
 
-        <EditText
-            android:id="@+id/endpoint_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/endpoint_label"
-            android:layout_toStartOf="@+id/persistent_keepalive_text"
-            android:inputType="textNoSuggestions|textVisiblePassword"
-            android:text="@={item.endpoint}" />
+            <TextView
+                android:id="@+id/allowed_ips_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pre_shared_key_text"
+                android:labelFor="@+id/allowed_ips_text"
+                android:text="@string/allowed_ips" />
 
-        <TextView
-            android:id="@+id/persistent_keepalive_label"
-            android:layout_width="96dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/endpoint_label"
-            android:layout_alignParentEnd="true"
-            android:labelFor="@+id/persistent_keepalive_text"
-            android:text="@string/persistent_keepalive" />
+            <EditText
+                android:id="@+id/allowed_ips_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/allowed_ips_label"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                android:text="@={item.allowedIPs}" />
 
-        <EditText
-            android:id="@+id/persistent_keepalive_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/endpoint_text"
-            android:layout_alignParentEnd="true"
-            android:layout_alignStart="@+id/persistent_keepalive_label"
-            android:hint="@string/hint_optional"
-            android:inputType="number"
-            android:text="@={item.persistentKeepalive}"
-            android:textAlignment="center" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/endpoint_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/allowed_ips_text"
+                android:layout_toStartOf="@+id/persistent_keepalive_label"
+                android:labelFor="@+id/endpoint_text"
+                android:text="@string/endpoint" />
+
+            <EditText
+                android:id="@+id/endpoint_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/endpoint_label"
+                android:layout_toStartOf="@+id/persistent_keepalive_text"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                android:text="@={item.endpoint}" />
+
+            <TextView
+                android:id="@+id/persistent_keepalive_label"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/endpoint_label"
+                android:layout_alignParentEnd="true"
+                android:labelFor="@+id/persistent_keepalive_text"
+                android:text="@string/persistent_keepalive" />
+
+            <EditText
+                android:id="@+id/persistent_keepalive_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/endpoint_text"
+                android:layout_alignParentEnd="true"
+                android:layout_alignStart="@+id/persistent_keepalive_label"
+                android:hint="@string/hint_optional"
+                android:inputType="number"
+                android:text="@={item.persistentKeepalive}"
+                android:textAlignment="center" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </layout>
