global: fix theme situation and clean up cruft while adding more cruft
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/drawable/fab_label_background.xml
+++ b/app/src/main/res/drawable/fab_label_background.xml
@@ -6,5 +6,5 @@
         android:left="8dp"
         android:right="8dp"
         android:top="4dp" />
-    <solid android:color="?android:attr/colorPrimary" />
+    <solid android:color="#444444" /> <!-- TODO(msf): themeify this -->
 </shape>
