--- a/app/src/main/res/drawable/list_item_background_anim.xml
+++ b/app/src/main/res/drawable/list_item_background_anim.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/list_item_ripple">
+    android:color="@color/list_item_ripple"> <!-- TODO(msf): themeify this -->
     <item android:drawable="@drawable/list_item_background" />
 </ripple>
