--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <!--TODO(zx2c4): set this once we have a color decided: <item name="colorAccent">@color/accent</item>-->
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="SettingsTheme" parent="AppTheme">
